test/vm/fails/modify_user.js

__copy(this.user, bech32());
